test/message/syntactic-tail-call-in-binop-rhs.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
  return b + continue f()  ;
             ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
